Use JGit Base64 class instead of sun.misc.BASE64Encoder, which is deprecated. Fixes #30